--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -93,21 +93,21 @@
     window.cnblogsConfig = {
 
         // ---- GitHub文件源配置 ----
-        GhUserName: 'TheLovelyBugFly', // GitHub用户名(不是昵称)，注意大小写
-        GhRepositories: 'Cnblogs-Theme-SimpleMemory', // GitHub主题仓库名称
-        GhVersions : '92bd82f20d69183c844c7bd3eb543c8c8fdb0592', // GitHub提交版本哈希值，根据版本加载代码，我有时候会提交代码进行调试，大家最好加载我仓库代码此处的版本 https://github.com/thelovelybugfly/Cnblogs-Theme-SimpleMemory/commits/master
+        GhUserName: 'Fofade', // GitHub用户名(不是昵称)，注意大小写
+        GhRepositories: 'cnblogsThemes', // GitHub主题仓库名称
+        GhVersions : '0cc8406a134b12a23f11692dcea490298e5178a7', // GitHub提交版本哈希值，根据版本加载代码。
 
         // ---- 基础信息配置 ----
-        blogUser      : "thelovelybugfly", // 博主名称，文章后缀和主页图片上都会使用此名称
-        blogAvatar    : "https://pic.cnblogs.com/avatar/1065454/20161119225202.png", // 用户头像URL
-        blogStartDate : "2016-11-17", // 入园时间，年-月-日，入园时间查看方法：鼠标停留园龄时间上，会显示入园时间
+        blogUser      : "fofade", // 博主名称，文章后缀和主页图片上都会使用此名称
+        blogAvatar    : "https://pic.cnblogs.com/avatar/1571096/20190105162411.png", // 用户头像URL
+        blogStartDate : "2019-01-05", // 入园时间，年-月-日，入园时间查看方法：鼠标停留园龄时间上，会显示入园时间
 
         // ---- 网站配置 ----
-        webpageTitleOnblur        : "(◍´꒳`◍) Hi, thelovelybugfly", // 当前页失去焦点，页面title显示文字
+        webpageTitleOnblur        : "(◍´꒳`◍) 不要离开我！", // 当前页失去焦点，页面title显示文字
         webpageTitleOnblurTimeOut : 500, // 当前页失去焦点，页面title变化，延时时间，单位毫秒
         webpageTitleFocus         : "(*´∇｀*) 欢迎回来！", // 当前页获取焦点，页面title显示文字，显示后延时恢复原title
         webpageTitleFocusTimeOut  : 1000, // 当前页获取焦点，页面title变化，延时时间，单位毫秒
-        webpageIcon : "https://files.cnblogs.com/files/thelovelybugfly/blog_logo.gif", // 网站图标
+        webpageIcon : "https://files-cdn.cnblogs.com/files/fofade/icon.ico", // 网站图标
 
         // ---- 进度条配置 ----
         progressBar: {
@@ -185,29 +185,29 @@
 
         // ---- 主页配置 ----
         homeTopImg    : [ // 主页图片Url，推荐尺寸>= 1920*1080，支持多张，每次刷新随机设置一张
-            "https://raw.githubusercontent.com/thelovelybugfly/Cnblogs-Theme-SimpleMemory/master/img/home_top_bg.jpg"
+            "https://raw.githubusercontent.com/Fofade/cnblogsThemes/master/img/home_top_bg.jpg"
         ],
         homeBannerText: "", // 主页头图上的标语，设置此选项会固定显示文字，默认为空，自动获取一句。
 
         // ---- 随笔页配置 ----
         essayTopImg: [ // 随笔页图片Url，支持多张，每次刷新随机设置一张
-            "https://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-569548.png"
+            "https://raw.githubusercontent.com/Fofade/cnblogsThemes/master/img/1.jpg"
         ],
         essayCodeHighlightingType: 'cnblogs', // 代码主题插件类型：cnblogs || highlightjs || prettify
         essayCodeHighlighting: 'cnblogs', // 代码高亮主题，具体主题参考文档
         essaySuffix:{ // 随笔后缀处配置
-            aboutHtml    : '', // 关于博主，不配置使用默认
+            aboutHtml    : 'a bird', // 关于博主，不配置使用默认
             copyrightHtml: '', // 版权声明，不配置使用默认
             supportHtml  : ''  // 声援博主，不配置使用默认
         },
 
         // ---- 页脚配置 ----
         bottomBlogroll: [ // 友情链接，[[链接名,链接]....]
-            ["申请坑位", 'https://msg.cnblogs.com/send/thelovelybugfly'],
-            ["申请坑位", 'https://msg.cnblogs.com/send/thelovelybugfly'],
-            ["申请坑位", 'https://msg.cnblogs.com/send/thelovelybugfly'],
-            ["申请坑位", 'https://msg.cnblogs.com/send/thelovelybugfly'],
-            ["申请坑位", 'https://msg.cnblogs.com/send/thelovelybugfly'],
+            ["申请坑位", 'https://msg.cnblogs.com/send/fofade'],
+            ["申请坑位", 'https://msg.cnblogs.com/send/fofade'],
+            ["申请坑位", 'https://msg.cnblogs.com/send/fofade'],
+            ["申请坑位", 'https://msg.cnblogs.com/send/fofade'],
+            ["申请坑位", 'https://msg.cnblogs.com/send/fofade'],
         ],
         bottomText: {  // 页脚标语
             icon: "❤️", // 图标
@@ -217,9 +217,9 @@
 
         // ---- 控制台输出 ----
         consoleList: [
-            ['thelovelybugfly CNBlogs', 'https://www.cnblogs.com/thelovelybugfly'],
-            ['thelovelybugfly GitHub', 'https://github.com/thelovelybugfly'],
-            ['thelovelybugfly Email', 'thelovelybugfly@foxmail.com']
+            ['fofade CNBlogs', 'https://www.cnblogs.com/fofade'],
+            ['fofade GitHub', 'https://github.com/fofade'],
+            ['fofade Email', 'fofade@foxmail.com']
         ],
         themeAuthor: true // 是否显示主题作者（原谅我的臭屁，O(∩_∩)O哈哈~）
     };
