修改评论区

--- a/html/pageHeading.html
+++ b/html/pageHeading.html
@@ -1,2 +1,4 @@
 <!-- Loading 底层遮罩 -->
 <div id='loading'></div>
+<!-- 评论区修改 -->
+<script src="https://raw.githubusercontent.com/Fofade/cnblogsThemes/master/js/cnblog.js"></script>
