添加点击特效

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -15,12 +15,12 @@
             <div class="nav-title"></div>
             <div class="icon-list">
                 <ul>
-                    <li><a href="https://www.cnblogs.com/thelovelybugfly/" target="_self">首页</a></li>
-                    <li><a href="https://msg.cnblogs.com/send/thelovelybugfly" target="_blank">联系</a></li>
-                    <li><a href="https://www.cnblogs.com/thelovelybugfly/rss" target="_blank">订阅</a></li>
+                    <li><a href="https://www.cnblogs.com/fofade/" target="_self">首页</a></li>
+                    <li><a href="https://msg.cnblogs.com/send/fofade" target="_blank">联系</a></li>
+                    <li><a href="https://www.cnblogs.com/fofade/rss" target="_blank">订阅</a></li>
                     <li><a href="https://i.cnblogs.com/" target="_blank">管理</a></li>
-                    <li><a href="https://github.com/thelovelybugfly" target="_blank">GitHub</a></li>
-                    <li><a href="https://www.cnblogs.com/" target="_blank">CNBlogs</a></li>
+                    <li><a href="https://github.com/fofade" target="_blank">GitHub</a></li>
+                    <li><a href="https://fofade.github.io" target="_blank">GHBlog</a></li>
                 </ul>
             </div>
 
@@ -191,7 +191,7 @@
 
         // ---- 随笔页配置 ----
         essayTopImg: [ // 随笔页图片Url，支持多张，每次刷新随机设置一张
-            "https://raw.githubusercontent.com/Fofade/cnblogsThemes/master/img/1.jpg"
+            "https://raw.githubusercontent.com/Fofade/cnblogsThemes/master/img/9.jpg"
         ],
         essayCodeHighlightingType: 'cnblogs', // 代码主题插件类型：cnblogs || highlightjs || prettify
         essayCodeHighlighting: 'cnblogs', // 代码高亮主题，具体主题参考文档
