--- a/html/pageFooter.html
+++ b/html/pageFooter.html
@@ -8,15 +8,15 @@
 <!--<script src="https://unpkg.com/meting@1.2/dist/Meting.min.js"></script>-->
 
 <!-- 看板娘-->
-<script src="https://raw.githubusercontent.com/Fofade/cnblogsThemes/master/live2dw/lib/L2Dwidget.min.js"></script>
-<script src="https://raw.githubusercontent.com/Fofade/cnblogsThemes/master/live2dw/lib/L2Dwidget.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/Fofade/cnblogsThemes@1.1/live2dw/lib/L2Dwidget.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/Fofade/cnblogsThemes@1.1/master/live2dw/lib/L2Dwidget.0.min.js"></script>
 <script>
     L2Dwidget.init({
         "model": {
             "scale": 1,
             "hHeadPos": 0.5,
             "vHeadPos": 0.618,
-            "jsonPath": "https://raw.githubusercontent.com/Fofade/cnblogsThemes/master/live2dw/assets/z16.model.json"
+            "jsonPath": "https://cdn.jsdelivr.net/gh/Fofade/cnblogsThemes@1.1/live2dw/assets/z16.model.json"
         },
         "display": {
             "superSample": 2,
@@ -42,7 +42,7 @@
 <!-- 右下角菜单 -->
 <div id="rightMenu"></div>
 <!-- 评论区修改 -->
-<script src="https://raw.githubusercontent.com/Fofade/cnblogsThemes/master/js/cnblog.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/Fofade/cnblogsThemes@1.1/js/cnblog.js"></script>
 <!-- 鼠标特效-->
 <script type="text/javascript">
     /* 鼠标特效 */
