--- a/html/pageFooter.html
+++ b/html/pageFooter.html
@@ -9,7 +9,7 @@
 
 <!-- 看板娘-->
 <script src="https://cdn.jsdelivr.net/gh/Fofade/cnblogsThemes@1.1/live2dw/lib/L2Dwidget.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Fofade/cnblogsThemes@1.1/master/live2dw/lib/L2Dwidget.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/Fofade/cnblogsThemes@1.1/live2dw/lib/L2Dwidget.0.min.js"></script>
 <script>
     L2Dwidget.init({
         "model": {
