--- a/html/pageFooter.html
+++ b/html/pageFooter.html
@@ -42,7 +42,7 @@
 <!-- 右下角菜单 -->
 <div id="rightMenu"></div>
 <!-- 评论区修改 -->
-<script src="https://cdn.jsdelivr.net/gh/Fofade/cnblogsThemes/js/cnblog.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/gh/Fofade/cnblogsThemes/js/cnblog.js"></script>-->
 <!-- 鼠标特效-->
 <script type="text/javascript">
     /* 鼠标特效 */
