--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -107,7 +107,7 @@
         webpageTitleOnblurTimeOut : 500, // 当前页失去焦点，页面title变化，延时时间，单位毫秒
         webpageTitleFocus         : "(*´∇｀*) 欢迎回来！", // 当前页获取焦点，页面title显示文字，显示后延时恢复原title
         webpageTitleFocusTimeOut  : 1000, // 当前页获取焦点，页面title变化，延时时间，单位毫秒
-        webpageIcon : "https://files-cdn.cnblogs.com/files/fofade/icon.ico", // 网站图标
+        webpageIcon : "https://cdn.jsdelivr.net/gh/Fofade/cnblogsThemes/img/cnblog/icon.ico", // 网站图标
 
         // ---- 进度条配置 ----
         progressBar: {
